--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-eit5v4hXl
 spring.security.oauth2.client.registration.google.scope=profile,email
 logging.level.com.example.hama.controller=INFO
 server.servlet.session.timeout=30m
+spring.jpa.properties.hibernate.format-sql=true
+file.upload.path=C:/upload
+spring.servlet.multipart.location=C:/upload/tmp
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.file-size-threshold=0
