--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-eit5v4hXl
 spring.security.oauth2.client.registration.google.scope=profile,email
 logging.level.com.example.hama.controller=INFO
 server.servlet.session.timeout=30m
+
+file.upload.path= c:/upload
